<resources>
    <string name="app_name">YZA POS</string>
    <string name="new_transaction">New Transaction</string>
    <string name="manage_transactions">Manage Transactions</string>
    <string name="admin">Admin</string>
    <string name="generate_report">Generate Report</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="del">Delete</string>
    <string name="next">Next</string>
    <string name="admin_options">Admin Options</string>
    <string name="staff">Staff</string>
    <string name="products">Products</string>
    <string name="add_product">Add Product</string>
    <string name="product_categories">Product Categories</string>
    <string name="payments">Payments</string>
    <string name="view">View</string>
    <string name="view_products">View Products</string>
    <string name="view_payments">Payments</string>
    <string name="print">Print</string>

    <string name="choose_category">Choose Category</string>
    <string name="choose_staff">Choose Staff Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apirootpdlocal">http://localhost:8000</string>
    <string name="apirootcloud">http://35.197.185.80:8000</string>
    <string name="apingrok">http://c5cfc75e.ngrok.io</string>
    <string name="apiaddress">http://c5cfc75e.ngrok.io</string>

    <string-array name="spinner_example">
        <item>Paper</item>
        <item>Sticker</item>
        <item>Tarpaulin</item>
    </string-array>

    <string name="unit_of_measure">Unit of measure</string>
    <string name="unit_price">Unit price</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="total_due">Total due</string>
    <string name="num_of_items">Number of Items</string>
    <string name="change_to_give">Change</string>
    <string name="mode_of_payment">Mode of payment</string>
    <string name="payment_details">Payment details</string>
    <string name="amount_paid">Amount paid</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="add_payment">Add Payment</string>
    <string name="balance">Balance</string>
    <string name="total_paid">Total paid</string>
    <string name="confirm">confirm</string>
    <string name="quantity">Quantity</string>
    <string name="product_category">Product category</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_address">Home Address</string>
    <string name="add_property">Add property</string>
    <string name="add_category">Add Category</string>
    <string name="add_staff">Add Staff</string>
    <string name="something_created">successfully created!</string>
    <string name="something_edited">successfully edited!</string>
    <string name="transaction_created">Transaction created!</string>
    <string name="select_quantity">Select quantity</string>
    <string name="quantity_dialog_default_clicked">None</string>
    <string name="category">Category</string>
    <string name="properties">Properties</string>

    <string name="transaction_id">Transaction ID</string>

    <string name="enter_password">Enter Password</string>
</resources>
