<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainIc">
    <TextView
        android:id="@+id/textview_product_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_category"/>

    <EditText
        android:id="@+id/edittext_quantity"
        android:hint="@string/unit_of_measure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"/>

    <LinearLayout
        android:id="@+id/layout_category_properties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>

    <Button
        android:id="@+id/button_add_product"
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>