<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_horizontal">

        <TextView
            android:id="@+id/total_due"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/total_due"
            android:textSize="@dimen/font_size_h4"
            android:layout_margin="@dimen/margin_linear_elements"/>

        <TextView
            android:id="@+id/paymentsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/payments"
            android:textSize="@dimen/font_size_h4"
            android:layout_margin="@dimen/margin_linear_elements"
            />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/payment_list_height"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/total_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/total_paid"
            android:textSize="@dimen/font_size_h4"
            android:textColor="#000000"
            android:layout_margin="@dimen/margin_linear_elements"/>

        <TextView
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/balance"
            android:textSize="@dimen/font_size_h4"
            android:textColor="@color/eagleGreen"
            android:layout_margin="@dimen/margin_linear_elements"/>

        <Button
            android:id="@+id/button_add_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_payment"
            android:layout_margin="@dimen/margin_linear_elements"
            android:background="@color/eagleGreen"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_size_h4"/>

    </LinearLayout>

</ScrollView>
