<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:background="@color/colorMainIc">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorMainIc"
        android:padding="@dimen/padding_wide">

        <TextView
            android:layout_width="@dimen/popup_button_width"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:textSize="@dimen/font_size_h4"
            android:id="@+id/dialog_title"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textAlignment="center"
            android:textColor="@color/eagleGreen"
            android:padding="@dimen/margin_linear_elements"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/FormLabel"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            style="@style/FormAnswer"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/properties"
            style="@style/FormLabel"
            />

        <LinearLayout
            android:id="@+id/layout_category_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <Button
            android:id="@+id/button_add_property"
            android:text="@string/add_property"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/popup_button_width"
            android:background="@color/mustard"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_size_h4"
            android:layout_margin="@dimen/margin_form_labels" />

        <Button
            android:id="@+id/button_add_item"
            android:text="@string/confirm"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/popup_button_width"
            android:background="@color/eagleGreen"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_size_h4"
            android:layout_margin="@dimen/margin_form_labels" />
    </LinearLayout>
</ScrollView>