<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/padding_horizontal">

    <TextView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/num_of_items"
        android:textSize="@dimen/font_size_h4"
        android:layout_margin="@dimen/margin_linear_elements"
        />

    <TextView
        android:id="@+id/amount_paid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/amount_to_pay"
        android:textSize="@dimen/font_size_h4"
        android:textColor="#000000"
        android:layout_margin="@dimen/margin_linear_elements"/>

    <EditText
        android:id="@+id/edittext_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="0.0"
        android:inputType="numberDecimal"
        android:textSize="@dimen/font_size_h4"
        android:textColor="#000000"
        android:background="@color/mustard"
        android:selectAllOnFocus="true"
        android:layout_margin="@dimen/margin_linear_elements"
        android:padding="@dimen/margin_linear_elements"/>

    <TextView
        android:id="@+id/change_to_give"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/change_to_give"
        android:textSize="@dimen/font_size_h4"
        android:layout_margin="@dimen/margin_linear_elements"/>

</LinearLayout>